--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
