--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^11.13.1",
+    "jose": "^5.9.6",
     "next": "15.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.5"
