--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.2.0",
     "framer-motion": "^11.13.1",
     "jose": "^5.9.6",
     "next": "15.0.4",
